# rendine

./: .gitignore  .gitmodules  README.md  meson.build
include/: assets.h  types.h
include/rendine/: Asset.hpp  GLObject.hpp  Info.hpp  Mesh.hpp  RenderObject.hpp  Shader.hpp  ShaderProgram.hpp  Texture.hpp  Transform.hpp
include/rendine/meshes/: Mesh2D.hpp
include/rendine/utils/: ANSIColorText.hpp  Log.hpp
res/materials/: FlatColor2D.material
res/shaders/: FlatColor2D.hlsl  fragment.glsl  fragment.spv  vertex.spv
src/: Mesh.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  assets.c  main.c  main.cpp  shader.c  shader.h  texture.c  texture.h
src/meshes/: Mesh2D.cpp
